// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TI should GET list of mandataires 1`] = `
Array [
  Object {
    "adresse": "21 rue de houx",
    "code_postal": "62000",
    "competences": null,
    "date_mesure_update": null,
    "department_id": 6,
    "dispo_max": 5,
    "email": "ud@ud.com",
    "email_send": null,
    "etablissement": "UDAHF",
    "genre": null,
    "id": 1,
    "latitude": 50.5333,
    "longitude": 2.6333,
    "mesures_en_attente": 0,
    "mesures_en_cours": 1,
    "nb_secretariat": 2,
    "nom": null,
    "prenom": "Adrien",
    "secretariat": false,
    "siret": null,
    "telephone": "0237100000",
    "telephone_portable": "0101010101",
    "type": "individuel",
    "user_id": 1,
    "ville": "Arras",
  },
  Object {
    "adresse": "21 rue monge",
    "code_postal": "62000",
    "competences": null,
    "date_mesure_update": null,
    "department_id": 6,
    "dispo_max": 3,
    "email": "panam@paris.com",
    "email_send": null,
    "etablissement": "test42",
    "genre": null,
    "id": 2,
    "latitude": 50.5333,
    "longitude": 2.6333,
    "mesures_en_attente": 0,
    "mesures_en_cours": 2,
    "nb_secretariat": 2,
    "nom": null,
    "prenom": "Julien",
    "secretariat": true,
    "siret": null,
    "telephone": "0237100000",
    "telephone_portable": "0101010101",
    "type": "prepose",
    "user_id": 2,
    "ville": "Paris",
  },
]
`;

exports[`TI should NOT GET mandataire profile 1`] = `
Object {
  "message": "Please log in",
  "name": "UnauthorizedError",
  "stack": Any<String>,
  "status": 401,
}
`;

exports[`should GET mandataire profile 1`] = `
Object {
  "adresse": "21 rue de houx",
  "code_postal": "62000",
  "competences": null,
  "date_mesure_update": null,
  "department_id": 6,
  "dispo_max": 5,
  "email": "ud@ud.com",
  "email_send": null,
  "etablissement": "UDAHF",
  "genre": null,
  "id": 1,
  "latitude": 50.5333,
  "longitude": 2.6333,
  "mesures_en_attente": 0,
  "mesures_en_cours": 1,
  "nb_secretariat": 2,
  "nom": null,
  "prenom": "Adrien",
  "secretariat": false,
  "siret": null,
  "telephone": "0237100000",
  "telephone_portable": "0101010101",
  "type": "individuel",
  "user_id": 1,
  "ville": "Arras",
}
`;
